table overflow fix

--- a/static/react/src/assets/css/style.css
+++ b/static/react/src/assets/css/style.css
@@ -15286,6 +15286,8 @@ html{
 	margin-top: 1.8%;
 	padding-left: 10%;
     padding-right: 10%;
+    max-width: 100%;
+    overflow-x: auto;
 }
 
 .table-style table th {
